--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "aliaslzr.utils",
   "version": "1.0.0",
   "description": "A changelog util to show all the features, bugfixes, improvements, etc  applied to a project",
-  "main": "app.js",
+  "main": "createChangelogEntry.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,6 +16,7 @@
   "author": "Alejandro Salazar Cruz",
   "license": "GPL-3.0-only",
   "dependencies": {
+    "fs-extra": "^11.2.0",
     "marked": "^14.0.0",
     "prompts": "^2.4.2"
   }
